Setup handler docker

--- a/handler/Dockerfile
+++ b/handler/Dockerfile
@@ -1,87 +1,40 @@
 FROM ubuntu
-ENV DEBIAN_FRONTEND=noninteractive
-ARG FUNCTION_DIR="/app"
+ARG FUNCTION_DIR="/home/app/"
+ARG PYTHON_VERSION="3.8"
 
-# Install python 3.7
+RUN mkdir -p ${FUNCTION_DIR}
+WORKDIR ${FUNCTION_DIR}
+
+# Install python
 RUN apt update && apt install -y software-properties-common
 RUN add-apt-repository ppa:deadsnakes/ppa -y
-RUN apt install -y python3.7
+RUN apt install -y python${PYTHON_VERSION}
 RUN apt install -y python3-pip
 
 # Install aws lambda runtime
 RUN python3 -m pip install awslambdaric --target ${FUNCTION_DIR}
 ADD https://github.com/aws/aws-lambda-runtime-interface-emulator/releases/latest/download/aws-lambda-rie /usr/bin/aws-lambda-rie
-RUN chmod 755 /usr/bin/aws-lambda-rie
+COPY entry.sh /
+RUN chmod 755 /usr/bin/aws-lambda-rie /entry.sh
+
+# Install awscli
+RUN apt update && apt install -y curl unzip
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" -s
+RUN unzip -q awscliv2.zip
+RUN ./aws/install
 
 # Install hmmer
 RUN apt-get install hmmer -y
-
-WORKDIR ${FUNCTION_DIR}
 
 # Install python dependencies
 COPY requirements.txt .
 RUN  pip3 install -r requirements.txt
 
+# Copy handler function
+COPY  app.py  ${FUNCTION_DIR}
+
 # Update models
 RUN defense-finder update
 
-# Copy handler function
-COPY  app.py  .
-
-CMD ["/app/app.handler"]
-
-
-
-
-
- #Define global args
-#ARG FUNCTION_DIR="/home/app/"
-#ARG RUNTIME_VERSION="3.7"
-#ARG DISTRO_VERSION="3.14"
-
- #Stage 1 - bundle base image + runtime
- #Grab a fresh copy of the image and install GCC
-#FROM python:${RUNTIME_VERSION}-alpine${DISTRO_VERSION} AS python-alpine
- #Install GCC (Alpine uses musl but we compile and link dependencies with GCC)
-#RUN apk add --no-cache \
-    #libstdc++
-
- #Stage 2 - build function and dependencies
-#FROM python-alpine AS build-image
- #Install aws-lambda-cpp build dependencies
-#RUN apk add --no-cache \
-    #build-base \
-    #libtool \
-    #autoconf \
-    #automake \
-    #libexecinfo-dev \
-    #make \
-    #cmake \
-    #libcurl
- #Include global args in this stage of the build
-#ARG FUNCTION_DIR
-#ARG RUNTIME_VERSION
- #Create function directory
-#RUN mkdir -p ${FUNCTION_DIR}
- #Copy handler function
-#COPY app/* ${FUNCTION_DIR}
- #Optional – Install the function's dependencies
- #RUN python${RUNTIME_VERSION} -m pip install -r requirements.txt --target ${FUNCTION_DIR}
- #Install Lambda Runtime Interface Client for Python
-#RUN python${RUNTIME_VERSION} -m pip install awslambdaric --target ${FUNCTION_DIR}
-
- #Stage 3 - final runtime image
- #Grab a fresh copy of the Python image
-#FROM python-alpine
- #Include global arg in this stage of the build
-#ARG FUNCTION_DIR
- #Set working directory to function root directory
-#WORKDIR ${FUNCTION_DIR}
- #Copy in the built dependencies
-#COPY --from=build-image ${FUNCTION_DIR} ${FUNCTION_DIR}
- #(Optional) Add Lambda Runtime Interface Emulator and use a script in the ENTRYPOINT for simpler local runs
-#ADD https://github.com/aws/aws-lambda-runtime-interface-emulator/releases/latest/download/aws-lambda-rie /usr/bin/aws-lambda-rie
-#COPY entry.sh /
-#RUN chmod 755 /usr/bin/aws-lambda-rie /entry.sh
-#ENTRYPOINT [ "/entry.sh" ]
-#CMD [ "app.handler" ]
+ENTRYPOINT [ "/entry.sh" ]
+CMD ["app.handler"]
