--- a/handler/Dockerfile
+++ b/handler/Dockerfile
@@ -1,34 +1,44 @@
-FROM ubuntu
+FROM python:3.8.11-alpine3.13 AS builder
 ARG FUNCTION_DIR="/home/app/"
-ARG PYTHON_VERSION="3.8"
 
+## Build dependencies
+RUN apk update && apk add build-base cmake autoconf automake libtool libexecinfo libexecinfo-dev python3-dev
+
+## Install hmmer from source
+RUN wget http://eddylab.org/software/hmmer/hmmer.tar.gz   \
+  && tar zxf hmmer.tar.gz  \
+  && cd hmmer-3.3.2/ \
+  && ./configure  \
+  && make  \
+  && make install  \
+  && cd easel \
+  && make install
+
+# Install lambdaric
+RUN mkdir -p ${FUNCTION_DIR}
+COPY app.py  ${FUNCTION_DIR}
+RUN pip install  --target ${FUNCTION_DIR} awslambdaric
+
+# macsyfinder
+COPY requirements.txt .
+RUN python -m pip install pip==20.2.1 && \
+  pip install -r requirements.txt
+
+FROM python:3.8.11-alpine3.13
+ARG FUNCTION_DIR="/home/app/"
 RUN mkdir -p ${FUNCTION_DIR}
 WORKDIR ${FUNCTION_DIR}
 
-# Install python
-RUN apt update && apt install -y software-properties-common
-RUN add-apt-repository ppa:deadsnakes/ppa -y
-RUN apt install -y python${PYTHON_VERSION}
-RUN apt install -y python3-pip
+# get all binaries and dependencies from build stage
+COPY --from=builder /usr/local/ /usr/local/
+# get lambdaric from build stage
+COPY --from=builder ${FUNCTION_DIR} ${FUNCTION_DIR}
 
 # Install aws lambda runtime
-RUN python3 -m pip install awslambdaric --target ${FUNCTION_DIR}
-ADD https://github.com/aws/aws-lambda-runtime-interface-emulator/releases/latest/download/aws-lambda-rie /usr/bin/aws-lambda-rie
 COPY entry.sh /
+ADD https://github.com/aws/aws-lambda-runtime-interface-emulator/releases/latest/download/aws-lambda-rie /usr/bin/aws-lambda-rie
 RUN chmod 755 /usr/bin/aws-lambda-rie /entry.sh
-
-# Install hmmer
-RUN apt-get install hmmer -y
-
-# Install python dependencies
-COPY requirements.txt .
-RUN pip3 install -r requirements.txt
-
-# Copy handler function
-COPY app.py ${FUNCTION_DIR}
-
-# Update models
-RUN macsydata install --org mdmparis defense-finder-models
+RUN macsydata install -U -u --org mdmparis defense-finder-models
 
 ENTRYPOINT [ "/entry.sh" ]
 CMD ["app.handler"]
