--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.6",
+    "jszip": "^3.7.1",
+    "papaparse": "^5.3.1",
     "postcss": "^7.0.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-super-responsive-table": "^5.2.0",
+    "react-table": "^7.7.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "typescript": "^4.3.5",
     "uuid": "^8.3.2",
@@ -45,8 +49,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jszip": "^3.4.1",
+    "@types/papaparse": "^5.2.6",
     "@types/react": "^17.0.17",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-table": "^7.7.2",
     "@types/uuid": "^8.3.1"
   }
 }
