--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.6",
+    "d3": "^7.3.0",
+    "iframe-resizer-react": "^1.1.0",
     "jszip": "^3.7.1",
     "papaparse": "^5.3.1",
     "postcss": "^7.0.36",
